testsuite/tests/indexed-types/should_fail/T8227.stderr
T8227.hs:24:27: error: [GHC-83865]
    • Couldn't match type: Scalar (V a)
                     with: Scalar (V p0) -> Scalar (V p0)
      Expected: Scalar (V a)
        Actual: Scalar (V (Scalar (V p0) -> p0))
                -> Scalar (V (Scalar (V p0) -> p0))
    • In the expression: arcLengthToParam eps eps
      In an equation for ‘absoluteToParam’:
          absoluteToParam eps seg = arcLengthToParam eps eps
    • Relevant bindings include
        seg :: a (bound at T8227.hs:24:21)
        eps :: Scalar (V a) (bound at T8227.hs:24:17)
        absoluteToParam :: Scalar (V a) -> a -> Scalar (V a)
          (bound at T8227.hs:24:1)

T8227.hs:24:48: error: [GHC-27958]
    • Couldn't match type ‘p0’ with ‘Scalar (V p0)’
        arising from a type equality Scalar (V a) ~ Scalar (V p0) -> p0
      The type variable ‘p0’ is ambiguous
    • In the second argument of ‘arcLengthToParam’, namely ‘eps’
      In the expression: arcLengthToParam eps eps
      In an equation for ‘absoluteToParam’:
          absoluteToParam eps seg = arcLengthToParam eps eps

